fix experience cards alignment

--- a/src/Component/Experience/Experience.css
+++ b/src/Component/Experience/Experience.css
@@ -2,6 +2,7 @@
     padding: 5rem 5%;
     display: flex;
     min-height: 100dvh;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
